sensord (0.6.28) unstable; urgency=low

  [Antti Virtanen]
  * Implemented interval downsampling. [Fixes: NB#196513].

  [Timo Rongas]
  * Fixes: NB#190879 - Sample interval metadata is not fetched from hardware

 -- Timo Rongas <ext-timo.2.rongas@nokia.com>  Tue, 19 Oct 2010 16:18:11 +0300

sensord (0.6.27) unstable; urgency=low

  [Antti Virtanen]
  * Debug output from USR2 is now printed with warning-level and output contains PID of active control and listen sessions if available. [Fixes: NB#197201].

  [Timo Rongas]
  * Reordered members to maintain binary compatibility.

 -- Timo Rongas <ext-timo.2.rongas@nokia.com>  Tue, 12 Oct 2010 16:18:11 +0300

sensord (0.6.26) unstable; urgency=low

  [Lihan Guo]
  * Added: Standby override test case	
  * Fixes: NB#193175 - Screen blank override is re-evaluated only at screen blank event

  [Pia Niemelä, Antti Virtanen]
  * Logging improved:
    - Log target can be configured with --log-target. Target is bitmask so multiple targets can be used at the same time. By default only syslog is used.
    - Log file path can be configured with --log-file-path.
    - SENSORD_USE_SYSLOG deprecated.
    - Log printing is now protected with mutex so output won't be messed up when used by multiple threads.
    - Small optimizations.

  [Timo Rongas]
  * Fixes: NB#196131 - Sensord should unset Screen.TopEdge when unclear
    - When device is flat on table,
      - Face value will be given as Orientation value for OrientationSensor
      - Screen.TopEdge will be set unset for ContextFW
  * Fixes: NB#196917 - Drive application shifts between portrait and landscape due to movement of accelerometer during driving
    - Averaging buffer is used to avoid rotation on shaky situations

  [Antti Virtanen]
  * Removed unnecessary mutex from NodeBase
  * Bin doesn't use separate thread anymore. Implemented ThreadBin which still supports threaded usage. [Fixes: NB#196900]